--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
         <tr><th rowspan="3">About</th><td>Full Name: Rafael Matthew Susanto Kwan</td></tr>
         <tr><td>Nationality: Indonesian</td></tr>
         <tr><td>Interests: AI, fintech, learning languages, singing, music, table tennis</td></tr>
-        <tr><th>Education</th><td>The University of Hong Kong <br> BASc(AppliedAI), Applied Artificial Intelligence <br> Relevant Coursework: Foundations of Artificial Intelligence, Computer Programming (Python, C++, and C), Foundations and Introduction to Data Science, Multivariable Calculus and Linear Algebra.</td></tr>
+        <tr><th>Education</th><td>The University of Hong Kong <br> BASc(AppliedAI), Applied Artificial Intelligence <br> Relevant Coursework: Foundations of Artificial Intelligence, Computer Programming (Python, C++, and C),<br> Foundations and Introduction to Data Science, Multivariable Calculus and Linear Algebra.</td></tr>
     </table>
     <main>
         <a href="https://www.instagram.com/rafaelmtw/" target="_blank">Click here</a> to connect with me. <br> <br>
